--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,9 +21,9 @@ jobs:
 
             - name: Install dependencies and build
               run: |
-                  npm install
+                  npm i
                   cd client
-                  npm install
+                  npm i
                   npm run build
                   cd ..
 
