--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,9 +31,14 @@ jobs:
       - name: Restart PM2 and Nginx
         run: |
           if pm2 list | grep -q "online"; then
+            echo "Stopping all PM2 processes..."
             pm2 stop all
+          else
+            echo "No running PM2 processes to stop."
           fi
+          echo "Starting all PM2 processes..."
           pm2 start all
           pm2 save
+          echo "Restarting Nginx..."
           sudo service nginx restart
-        shell: bash
+        shell: /usr/bin/bash --noprofile --norc -e -o pipefail
