--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,4 +41,4 @@ jobs:
           pm2 save
           echo "Restarting Nginx..."
           sudo service nginx restart
-        shell: /usr/bin/bash --noprofile --norc -e -o pipefail
+        shell: bash
