--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,8 @@ jobs:
 
       - name: Restart PM2 and Nginx
         run: |
-            pm2 stop 0
-            pm2 start 0
+            cd /var/www/website/_work/stock-investment/stock-investment
+            pm2 stop all     
+            pm2 start all
             pm2 save
             sudo service nginx restart
